--- a/SHA1CalcOnMac/SHA1CalcOnMac-Info.plist
+++ b/SHA1CalcOnMac/SHA1CalcOnMac-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>seraphyware.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>jp.seraphyware.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
